# phoenix_cli

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-macos.yml
api/: CMakeLists.txt  web_server.cc  web_server.h
app/: CMakeLists.txt  main.cc  resources.qrc  tray_icon_manager.cc  tray_icon_manager.h
cmake/: AddGitSubmodule.cmake  config.h.in  deploy-qt-mac.cmake.in  installer_component.qs
phoenix/: CMakeLists.txt
phoenix/llama.cpp-mainline/common/: common.cpp
phoenix/llama.cpp-mainline/ggml/src/: ggml-vulkan.cpp
phoenix/llama.cpp-mainline/ggml/src/ggml-cuda/: common.cuh
phoenix/llama.cpp-mainline/include/: llama.h
phoenix/phoenix/llama.cpp-mainline/ggml/src/: ggml-kompute.cpp  ggml-rocm.cu
phoenix/phoenix/llama.cpp-mainline/src/: llama.cpp
resources/: Info.plist  icon.icns
scripts/: create_ds_store.applescript.in  create_ds_store.sh  update_path.sh.in
src/: CMakeLists.txt  chat.cc  chat.h  chat_manager.cc  chat_manager.h  commands_list.cc  commands_list.h  database_manager.cc  database_manager.h  directory_manager.cc  directory_manager.h  download_model.cc  download_model.h  embedding.cc  embedding.h  header.h  models_list.cc  models_list.h  openai.cc  openai.h  parse_json.cc  parse_json.h  utils.cc  utils.h  web_server.cc  web_server.h
src/api/: api.cc  api.h
src/api/controllers/: assistant_collection_controller.cc  assistant_controller.cc  assistant_file_controller.cc  assistant_tool_controller.cc  assistant_workspace_controller.cc  auth_controller.cc  chat_controller.cc  chat_file_controller.cc  collection_controller.cc  collection_file_controller.cc  collection_workspace_controller.cpp  file_controller.cc  file_item_controller.cc  folder_controller.cc  message_controller.cc  message_file_item_controller.cc  model_controller.cc  model_workspace_controller.cc  preset_controller.cc  preset_workspace_controller.cc  preset_workspace_controller.cpp  profile_controller.cc  prompt_controller.cc  prompt_workspace_controller.cc  streaming_controller.cc  tool_controller.cc  tool_workspace_controller.cc  workspace_controller.cc
src/api/include/: crow_all.h
src/api/include/controllers/: assistant_collection_controller.h  assistant_controller.h  assistant_file_controller.h  assistant_tool_controller.h  assistant_workspace_controller.h  auth_controller.h  chat_controller.h  chat_file_controller.h  collection_controller.h  collection_file_controller.h  collection_workspace_controller.h  file_controller.h  file_item_controller.h  folder_controller.h  message_controller.h  message_file_item_controller.h  model_controller.h  model_workspace_controller.h  preset_controller.h  preset_workspace_controller.h  profile_controller.h  prompt_controller.h  prompt_workspace_controller.h  streaming_controller.h  tool_controller.h  tool_workspace_controller.h  workspace_controller.h
src/api/include/models/: assistant.h  assistant_collection.h  assistant_file.h  assistant_tool.h  assistant_workspace.h  chat.h  chat_file.h  collection.h  collection_file.h  collection_workspace.h  database.h  file.h  file_item.h  folder.h  message.h  message_file_item.h  model.h  model_workspace.h  preset.h  preset_workspace.h  profile.h  prompt.h  prompt_workspace.h  tool.h  tool_workspace.h  user.h  workspace.h
src/api/include/routes/: assistant.h  assistant_collection.h  assistant_file.h  assistant_tool.h  assistant_workspace.h  auth.h  chat.h  chat_file.h  collection.h  collection_file.h  collection_workspace.h  file.h  file_item.h  folder.h  message.h  message_file_item.h  model.h  model_workspace.h  preset.h  preset_workspace.h  profile.h  prompt.h  prompt_workspace.h  streaming.h  tool.h  tool_workspace.h  workspace.h
src/api/include/utils/: utils.h
src/api/models/: assistant.cc  assistant_collection.cc  assistant_file.cc  assistant_tool.cc  assistant_workspace.cc  chat.cc  chat_file.cc  collection.cc  collection_file.cc  collection_workspace.cc  database.cc  file.cc  file_item.cc  folder.cc  message.cc  message_file_item.cc  model.cc  model_workspace.cc  preset.cc  preset_workspace.cc  profile.cc  prompt.cc  prompt_workspace.cc  tool.cc  tool_workspace.cc  user.cc  workspace.cc
src/api/routes/: assistant.cc  assistant_collection.cc  assistant_file.cc  assistant_tool.cc  assistant_workspace.cc  auth.cc  chat.cc  chat_file.cc  collection.cc  collection_file.cc  collection_workspace.cc  file.cc  file_item.cc  folder.cc  message.cc  message_file_item.cc  model.cc  model_workspace.cc  preset.cc  preset_workspace.cc  profile.cc  prompt.cc  prompt_workspace.cc  streaming.cc  tool.cc  tool_workspace.cc  workspace.cc
src/api/utils/: utils.cc
src/server/: CMakeLists.txt  server.cpp  server.h
src/talk-llama/: CMakeLists.txt  talk-llama.cpp  talk-llama.h
ui/: config  index  package-lock.json  package.json  packed-refs
ui/app/[locale]/: layout.tsx  page.tsx
ui/app/[locale]/[workspaceid]/: layout.tsx
ui/app/[locale]/login/: page.tsx
ui/app/phoenix_services/: api.ts  assistant-images.ts  assistants.ts  auth.ts  chats.ts  collections.ts  files.ts  folders.ts  interfaces.ts  models.ts  presets.ts  prompts.ts  tools.ts  workspace.ts
ui/components/chat/: chat-messages.tsx  chat-ui.tsx
ui/components/chat/chat-helpers/: index.ts
ui/components/chat/chat-hooks/: use-chat-handler.tsx
ui/components/icons/: chatbotui-svg.tsx
ui/components/models/: model-icon.tsx  model-option.tsx  model-select.tsx
ui/components/sidebar/items/prompts/: create-prompt.tsx
ui/components/ui/: brand.tsx
ui/db/: workspaces.ts
ui/logs/: HEAD
ui/objects/pack/: pack-510df2c7b4b8a76146f5ce6ebcc37f92cf9110a7.idx  pack-510df2c7b4b8a76146f5ce6ebcc37f92cf9110a7.pack
ui/refs/heads/: main
